--- a/Gog_Data_Time.ipynb
+++ b/Gog_Data_Time.ipynb
@@ -14,6 +14,15 @@
  },
  "cells": [
   {
+   "source": [
+    "# GAPT - Support Vector Machines\n",
+    "\n",
+    "Firstly the necessary libraries are imported"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "id": "akA0YSFfzcDV"
@@ -23,7 +32,7 @@
     "import pandas as pd\n",
     "from time import time\n",
     "from IPython.display import display # Allows the use of display() for DataFrames\n",
-    "#from google.colab import drive\n",
+    "#from google.colab import drive #Only needed on Colab\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn import preprocessing\n",
@@ -41,20 +50,19 @@
    "outputs": []
   },
   {
-   "cell_type": "code",
+   "source": [
+    "# Loading datasets\n",
+    "\n",
+    "The training and testing data are loaded from their respective CSV files using the **Pandas** function *read_csv*. The first row in the two datasets are outputted to ensure that the files were read correctly"
+   ],
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "gzswijxn_zVI",
     "outputId": "2a6756f3-b504-43b0-a16a-30f5e391c5bd"
-   },
-   "source": [
-    "#mount drive\n",
-    "#drive.mount(\"/content/drive\")"
-   ],
-   "execution_count": 2,
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
@@ -62,74 +70,19 @@
     "id": "Zc0VwWBv_7Kh"
    },
    "source": [
-    "# Load training and testing\n",
+    "#mount drive\n",
+    "#drive.mount(\"/content/drive\")\n",
     "path_to_data = \"\" #\"drive/MyDrive/Kaggle/\"\n",
     "\n",
     "train = pd.read_csv(path_to_data + \"train - OG.csv\")\n",
-    "test = pd.read_csv(path_to_data + \"test.csv\")"
-   ],
-   "execution_count": 3,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 286
-    },
-    "id": "DEZ0oYyRAmBs",
-    "outputId": "deaa29ee-a3e3-4e08-abd4-f5379b22e89f"
-   },
-   "source": [
-    "# check it loaded ok\n",
+    "test = pd.read_csv(path_to_data + \"test.csv\")\n",
+    "\n",
+    "#Check it loaded ok\n",
     "display(train.head(n=1))\n",
     "display(test.head(n=1))"
    ],
-   "execution_count": 4,
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "   tBodyAcc-mean()-X  tBodyAcc-mean()-Y  tBodyAcc-mean()-Z  tBodyAcc-std()-X  \\\n0           0.288585          -0.020294          -0.132905         -0.995279   \n\n   tBodyAcc-std()-Y  tBodyAcc-std()-Z  tBodyAcc-mad()-X  tBodyAcc-mad()-Y  \\\n0         -0.983111         -0.913526         -0.995112         -0.983185   \n\n   tBodyAcc-mad()-Z  tBodyAcc-max()-X  ...  fBodyBodyGyroJerkMag-kurtosis()  \\\n0         -0.923527         -0.934724  ...                        -0.710304   \n\n   angle(tBodyAccMean,gravity)  angle(tBodyAccJerkMean),gravityMean)  \\\n0                    -0.112754                                0.0304   \n\n   angle(tBodyGyroMean,gravityMean)  angle(tBodyGyroJerkMean,gravityMean)  \\\n0                         -0.464761                             -0.018446   \n\n   angle(X,gravityMean)  angle(Y,gravityMean)  angle(Z,gravityMean)  subject  \\\n0             -0.841247              0.179941             -0.058627        1   \n\n   Activity  \n0  STANDING  \n\n[1 rows x 563 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tBodyAcc-mean()-X</th>\n      <th>tBodyAcc-mean()-Y</th>\n      <th>tBodyAcc-mean()-Z</th>\n      <th>tBodyAcc-std()-X</th>\n      <th>tBodyAcc-std()-Y</th>\n      <th>tBodyAcc-std()-Z</th>\n      <th>tBodyAcc-mad()-X</th>\n      <th>tBodyAcc-mad()-Y</th>\n      <th>tBodyAcc-mad()-Z</th>\n      <th>tBodyAcc-max()-X</th>\n      <th>...</th>\n      <th>fBodyBodyGyroJerkMag-kurtosis()</th>\n      <th>angle(tBodyAccMean,gravity)</th>\n      <th>angle(tBodyAccJerkMean),gravityMean)</th>\n      <th>angle(tBodyGyroMean,gravityMean)</th>\n      <th>angle(tBodyGyroJerkMean,gravityMean)</th>\n      <th>angle(X,gravityMean)</th>\n      <th>angle(Y,gravityMean)</th>\n      <th>angle(Z,gravityMean)</th>\n      <th>subject</th>\n      <th>Activity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.288585</td>\n      <td>-0.020294</td>\n      <td>-0.132905</td>\n      <td>-0.995279</td>\n      <td>-0.983111</td>\n      <td>-0.913526</td>\n      <td>-0.995112</td>\n      <td>-0.983185</td>\n      <td>-0.923527</td>\n      <td>-0.934724</td>\n      <td>...</td>\n      <td>-0.710304</td>\n      <td>-0.112754</td>\n      <td>0.0304</td>\n      <td>-0.464761</td>\n      <td>-0.018446</td>\n      <td>-0.841247</td>\n      <td>0.179941</td>\n      <td>-0.058627</td>\n      <td>1</td>\n      <td>STANDING</td>\n    </tr>\n  </tbody>\n</table>\n<p>1 rows × 563 columns</p>\n</div>"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "   tBodyAcc-mean()-X  tBodyAcc-mean()-Y  tBodyAcc-mean()-Z  tBodyAcc-std()-X  \\\n0           0.257178          -0.023285          -0.014654         -0.938404   \n\n   tBodyAcc-std()-Y  tBodyAcc-std()-Z  tBodyAcc-mad()-X  tBodyAcc-mad()-Y  \\\n0         -0.920091         -0.667683         -0.952501         -0.925249   \n\n   tBodyAcc-mad()-Z  tBodyAcc-max()-X  ...  fBodyBodyGyroJerkMag-kurtosis()  \\\n0         -0.674302         -0.894088  ...                        -0.705974   \n\n   angle(tBodyAccMean,gravity)  angle(tBodyAccJerkMean),gravityMean)  \\\n0                     0.006462                               0.16292   \n\n   angle(tBodyGyroMean,gravityMean)  angle(tBodyGyroJerkMean,gravityMean)  \\\n0                         -0.825886                              0.271151   \n\n   angle(X,gravityMean)  angle(Y,gravityMean)  angle(Z,gravityMean)  subject  \\\n0             -0.720009              0.276801             -0.057978        2   \n\n   Activity  \n0  STANDING  \n\n[1 rows x 563 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tBodyAcc-mean()-X</th>\n      <th>tBodyAcc-mean()-Y</th>\n      <th>tBodyAcc-mean()-Z</th>\n      <th>tBodyAcc-std()-X</th>\n      <th>tBodyAcc-std()-Y</th>\n      <th>tBodyAcc-std()-Z</th>\n      <th>tBodyAcc-mad()-X</th>\n      <th>tBodyAcc-mad()-Y</th>\n      <th>tBodyAcc-mad()-Z</th>\n      <th>tBodyAcc-max()-X</th>\n      <th>...</th>\n      <th>fBodyBodyGyroJerkMag-kurtosis()</th>\n      <th>angle(tBodyAccMean,gravity)</th>\n      <th>angle(tBodyAccJerkMean),gravityMean)</th>\n      <th>angle(tBodyGyroMean,gravityMean)</th>\n      <th>angle(tBodyGyroJerkMean,gravityMean)</th>\n      <th>angle(X,gravityMean)</th>\n      <th>angle(Y,gravityMean)</th>\n      <th>angle(Z,gravityMean)</th>\n      <th>subject</th>\n      <th>Activity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.257178</td>\n      <td>-0.023285</td>\n      <td>-0.014654</td>\n      <td>-0.938404</td>\n      <td>-0.920091</td>\n      <td>-0.667683</td>\n      <td>-0.952501</td>\n      <td>-0.925249</td>\n      <td>-0.674302</td>\n      <td>-0.894088</td>\n      <td>...</td>\n      <td>-0.705974</td>\n      <td>0.006462</td>\n      <td>0.16292</td>\n      <td>-0.825886</td>\n      <td>0.271151</td>\n      <td>-0.720009</td>\n      <td>0.276801</td>\n      <td>-0.057978</td>\n      <td>2</td>\n      <td>STANDING</td>\n    </tr>\n  </tbody>\n</table>\n<p>1 rows × 563 columns</p>\n</div>"
-     },
-     "metadata": {}
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "LgCHY3EkRmpq",
-    "outputId": "f2e6d448-2a2f-493a-bc09-aaa25c0e1c3a"
-   },
-   "source": [
-    "print(len(set.intersection(set(train), set(test))))\n",
-    "test.append(train.head(n=100), ignore_index = True)\n",
-    "print(len(set.intersection(set(train), set(test))))"
-   ],
-   "execution_count": 5,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "563\n563\n"
-     ]
-    }
-   ]
+   "execution_count": 3,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -137,7 +90,7 @@
     "id": "EoBpak8yKZ2y"
    },
    "source": [
-    "The training and test data are intersected to see if there is any overlapping data."
+    "The training and test data are merged using inner join to see if there is any overlapping data. The output is an empty data frame - containing only the list of different features - meaning that there are no intersections between the two."
    ]
   },
   {
@@ -152,13 +105,7 @@
    "source": [
     "\n",
     "merged = pd.merge(train, test, how='inner')\n",
-    "print(merged)\n",
-    "#The output is an empty data frame, meaning that there are no intersections between the two!\n",
-    "\n",
-    "# train_copy = train.append(test.head(n=1), ignore_index = True)\n",
-    "\n",
-    "# merged = pd.merge(train_copy, test, how='inner')\n",
-    "# print(merged)\n"
+    "print(merged)\n"
    ],
    "execution_count": 6,
    "outputs": [
@@ -208,6 +155,13 @@
      ]
     }
    ]
+  },
+  {
+   "source": [
+    "The different activities were plotted on a pie chart."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -468,6 +422,22 @@
    ]
   },
   {
+   "source": [
+    "As can be seen from the above metrics, SVM is quite clearly the most accurate classifier of the three, and it is for that reason that we will use it as one of the main classifiers for the group practical task"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# Support Vector Classifier\n",
+    "\n",
+    "There are a number of different parameters we can apply to SVC in order to obtain the best results possible. These different parameters were passed through a Grid Search model, which applies all of them to train various SVCs."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "colab": {
@@ -569,6 +539,23 @@
     "plt.rcParams.update({'font.size': 8})\n",
     "plot_confusion_matrix(estimator=best_clf, X=X_test_scaled, y_true=Y_test, display_labels=labels, ax=ax, cmap='Greens')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The best parameters were: {'C': 10, 'gamma': 'scale', 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The best parameters were:\", grid_fit.best_params_)"
    ]
   },
   {
